# Frame-to-Event-Conversion-Framework

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/dsec/test/zurich_city_13_a/images/: timestamps.txt
data/dsec/test/zurich_city_13_a/images/left/: exposure_timestamps.txt
data/thun_00_a/: window_queries.txt
data/zurich_city_13_a/: image_exposure_timestamps_left.txt  image_timestamps.txt
docs/: Frame_to_Event_Conversion_Framework.md
docs/presentation/: main.tex
experiments/sfod/: confusion_matrix.ipynb  sfod_compatibility.ipynb  sfod_training.ipynb
notebooks/: Comparison.ipynb  Evaluation.ipynb
object_detection_evaluation/: TWL Spike Yolo.ipynb
src/: Events_Information.ipynb  cli.py  event_stream_generation.ipynb  images.py  utils.py
src/core/: event_generator.py
src/framework/: Events_Information.ipynb  cli.py
src/framework/analysis/: Analysis.ipynb
src/framework/comparison/: Comparison.ipynb
src/framework/core/: event_generator.py
src/framework/evaluation/: Evaluation.ipynb  cli.py  evaluator.py  metrics.py  parser.py  visualization.py  windows.py
src/framework/utils/: dsec_to_video_converter.py  eventslicer.py  h5_functions.py  images.py  sfod_converter.py
src/framework/utils/dsec/: visualize_detection.py
src/framework/utils/prophesee/: dat_events_tools.py
src/framework/utils/v2e/: v2e_change_format.py
src/utils/: eventslicer.py  h5_functions.py  images.py  parser.py
v2e-output/: v2e_tutorial.ipynb
zurich_city_13_a_summary/: analysis.json
(+1 files in other folders)
