[project]
name = "framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "imageio>=2.37.3",
    "lpips>=0.1.4",
    "matplotlib>=3.11.0",
    "numpy>=2.4,<2.5",
    "numba>=0.65.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "tabulate>=0.10.0",
    "streamlit>=1.59.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/framework"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
